added image files

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,31 @@
     <link rel="stylesheet" href="style.css">
     <title>To-do List</title>
 </head>
-<body class="bg-amber-300">
-    <p>Hello</p>
+<body>
+    <div class="flex h-screen justify-center items-center">
+        <div class="w-[600px] h-[480px] bg-cream-container rounded-[25px] px-[60px] py-[10px]">
+            <div class="w-[480px] h-[460px] flex flex-col justify-center items-center font-anonymouspro font-bold">
+                <div class="w-[300px] h-[90px] text-center">
+                    <h1 class="text-[28px]">To-do List</h1>
+                    <div class="bg-white-fields border-2 border-cream-buttons rounded-[25px]">
+                        <input type="text" class="w-[300px] h-[40px] outline-0 mx-[8px] text-[18px]">
+                    </div>
+                </div>
+
+                <div class="w-[300px] h-[40px] justify-center gap-[15px] text-[18px] my-[15px]">
+                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px]">add</button>
+                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px]">view</button>
+                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px]">delete</button>
+                </div>
+
+                <div class="w-[480px] h-[300px] bg-white-fields border-2 border-cream-buttons rounded-[15px]">
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
