started coding front-end part

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div class="flex h-screen justify-center items-center">
         <div class="w-[600px] h-[480px] bg-cream-container rounded-[25px] px-[60px] py-[10px]">
             <div class="w-[480px] h-[460px] flex flex-col justify-center items-center font-anonymouspro font-bold">
+                
                 <div class="w-[300px] h-[90px] text-center">
                     <h1 class="text-[28px]">To-do List</h1>
                     <div class="bg-white-fields border-2 border-cream-buttons rounded-[25px]">
@@ -17,14 +18,27 @@
                     </div>
                 </div>
 
-                <div class="w-[300px] h-[40px] justify-center gap-[15px] text-[18px] my-[15px]">
-                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px]">add</button>
-                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px]">view</button>
-                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px]">delete</button>
+                <div class="flex w-[300px] h-[40px] my-[15px] gap-[15px] text-[18px]">
+                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px] cursor-pointer active:scale-90 transform duration-80 ease-in-out">add</button>
+                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px] cursor-pointer active:scale-90 transform duration-80 ease-in-out">view</button>
+                    <button class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px] cursor-pointer active:scale-90 transform duration-80 ease-in-out">delete</button>
                 </div>
 
-                <div class="w-[480px] h-[300px] bg-white-fields border-2 border-cream-buttons rounded-[15px]">
-
+                <div class="w-[480px] h-[300px] bg-white-fields border-2 border-cream-buttons rounded-[15px] text-[20px]">
+                    <ul class="mx-[15px] my-[10px]">
+                        <li class="flex items-center gap-[10px]">
+                            <img src="images/checkbox.png" class="w-[20px] h-[20px]">
+                            Wash the dishes
+                        </li>
+                        <li class="flex items-center gap-[10px]">
+                            <img src="images/checkbox.png" class="w-[20px] h-[20px]">
+                            Pay bills and taxes
+                        </li>
+                        <li class="flex items-center gap-[10px]">
+                            <img src="images/checkbox.png" class="w-[20px] h-[20px]">
+                            Maglulu to lessen stress
+                        </li>
+                    </ul>
                 </div>
 
             </div>
