change input tag style from mx to px for better typing spacing

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
                 <div class="w-[300px] h-[90px] text-center">
                     <h1 class="text-[28px]">To-do List</h1>
                     <div class="bg-white-fields border-2 border-cream-buttons rounded-[25px]">
-                        <input id="input-el" type="text" required placeholder="Add new task" class="w-[300px] h-[40px] outline-0 mx-[10px] text-[18px]">
+                        <input id="input-el" type="text" required placeholder="Add new task" class="w-[300px] h-[40px] outline-0 px-[15px] text-[18px]">
                     </div>
                 </div>
 
@@ -24,7 +24,7 @@
                     <button id="deletebtn-el" class="w-[90px] h-[40px] bg-cream-buttons rounded-[15px] cursor-pointer active:scale-90 transform duration-80 ease-in-out">delete</button>
                 </div>
 
-                <div class="w-[480px] h-[300px] bg-white-fields border-2 border-cream-buttons rounded-[15px] text-[20px]">
+                <div class="w-[480px] h-[300px] bg-white-fields border-2 border-cream-buttons rounded-[15px] text-[20px] overflow-y-auto">
                     <ul id="list-el" class="mx-[15px] my-[10px]">
                         
                     </ul>
