added cursort pointer attr. to ul tag

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="w-[480px] h-[300px] bg-white-fields border-2 border-cream-buttons rounded-[15px] text-[20px] overflow-y-auto">
-                    <ul id="list-el" class="mx-[15px] my-[10px]">
+                    <ul id="list-el" class="mx-[15px] my-[10px] cursor-pointer">
                         
                     </ul>
                 </div>
